pages/primitives/docs/components/accordion/0.0.7/index.mdx
---
title: Accordion
name: accordion
description: A vertically stacked set of interactive headings that each reveal an associated section of content.
aria: https://www.w3.org/TR/wai-aria-practices-1.2/#accordion
features:
  - Full keyboard navigation.
  - Can expand only one panel at a time or multiple.
  - Can be controlled or uncontrolled.
---

import { AccordionHero } from '../../../../../../components/Hero/AccordionHero';

<HeroSlot>
  <AccordionHero />
</HeroSlot>

## Installation

Install the component from your command line.

```bash
npm install @radix-ui/react-accordion
```

## Anatomy

Import the components and piece the parts together.

```jsx
import * as Accordion from '@radix-ui/react-accordion';

export default () => (
  <Accordion.Root>
    <Accordion.Item>
      <Accordion.Header>
        <Accordion.Button />
      </Accordion.Header>
      <Accordion.Panel />
    </Accordion.Item>
  </Accordion.Root>
);
```

## Basic example

Create your styled accordion component from the primitive parts.

```jsx manual
// import { styled } from 'path-to/stitches.config';
import * as Accordion from '@radix-ui/react-accordion';

const StyledAccordion = styled(Accordion.Root, {
  borderTop: '1px solid gainsboro',
});

const StyledItem = styled(Accordion.Item, {
  borderBottom: '1px solid gainsboro',
});

const StyledHeader = styled(Accordion.Header, {
  margin: 0,
  display: 'flex',
});

const StyledButton = styled(Accordion.Button, {
  backgroundColor: 'transparent',
  border: 'none',
  padding: 10,
  flex: 1,
  textAlign: 'left',
});

const StyledPanel = styled(Accordion.Panel, {
  padding: 10,
});

export default () => (
  <StyledAccordion type="single">
    <StyledItem value="item-1">
      <StyledHeader>
        <StyledButton>Item 1</StyledButton>
      </StyledHeader>
      <StyledPanel>
        Here goes the content for the accordion item 1.
      </StyledPanel>
    </StyledItem>

    <StyledItem value="item-2">
      <StyledHeader>
        <StyledButton>Item 2</StyledButton>
      </StyledHeader>
      <StyledPanel>
        Here goes the content for the accordion item 2.
      </StyledPanel>
    </StyledItem>

    <StyledItem value="item-3">
      <StyledHeader>
        <StyledButton>Item 3</StyledButton>
      </StyledHeader>
      <StyledPanel>
        Here goes the content for the accordion item 3.
      </StyledPanel>
    </StyledItem>
  </StyledAccordion>
);
```

<Note>

**Note:** This example uses [Stitches](https://stitches.dev) but any styling solution is [compatible](../../overview/styling).

</Note>

## API Reference

### Root

Contains all the parts of an accordion.

<PropsTable
  data={[
    {
      name: 'as',
      required: false,
      type: 'keyof JSX.IntrinsicElements | React.ComponentType<any>',
      typeSimple: 'enum',
      default: 'div',
      description:
        'Change the component to a different HTML tag or custom component. This will merge the original component props with the props of the supplied element/component and change the underlying DOM node.',
    },
    {
      name: 'type',
      required: true,
      type: '"single" | "multiple"',
      typeSimple: 'enum',
      description: (
        <span>
          Determines whether a single panel can be open at a time or
          multiple panels at the same time.
        </span>
      ),
    },
    {
      name: 'value',
      required: false,
      type: 'string',
      description: (
        <span>
          The controlled value of the item to expand when{' '}
          <Code>type</Code> is <Code>"single"</Code>. Must be used in
          conjunction with <Code>onValueChange</Code>.
        </span>
      ),
    },
    {
      name: 'defaultValue',
      required: false,
      type: 'string',
      description: (
        <span>
          The value of the item to expand when initially rendered
          (when <Code>type</Code> is <Code>"single"</Code>). Use when
          you do not need to control the state of the items.
        </span>
      ),
    },
    {
      name: 'onValueChange',
      required: false,
      type: '(value: string) => void',
      typeSimple: 'function',
      description: (
        <span>
          Event handler called when the expanded state of an item
          changes (when <Code>type</Code> is <Code>"single"</Code>).
        </span>
      ),
    },
    {
      name: 'value',
      required: false,
      default: '[]',
      type: 'string[]',
      description: (
        <span>
          The controlled value of the item to expand when{' '}
          <Code>type</Code> is <Code>"multiple"</Code>. Must be used
          in conjunction with <Code>onValueChange</Code>.
        </span>
      ),
    },
    {
      name: 'defaultValue',
      required: false,
      default: '[]',
      type: 'string[]',
      description: (
        <span>
          The value of the item to expand when initially rendered when{' '}
          <Code>type</Code> is <Code>"multiple"</Code>. Use when you
          do not need to control the state of the items.
        </span>
      ),
    },
    {
      name: 'onValueChange',
      required: false,
      type: '(value: string[]) => void',
      typeSimple: 'function',
      description: (
        <span>
          Event handler called when the expanded state of an item
          changes (when <Code>type</Code> is <Code>"multiple"</Code>).
        </span>
      ),
    },
    {
      name: 'disabled',
      required: false,
      type: 'boolean',
      default: 'false',
      description: (
        <span>
          When <Code>true</Code>, prevents the user from interacting
          with the accordion and all its items.
        </span>
      ),
    },
  ]}
/>

### Item

Contains all the parts of a collapsible section.

<PropsTable
  data={[
    {
      name: 'as',
      required: false,
      type: 'keyof JSX.IntrinsicElements | React.ComponentType<any>',
      typeSimple: 'enum',
      default: 'div',
      description:
        'Change the component to a different HTML tag or custom component. This will merge the original component props with the props of the supplied element/component and change the underlying DOM node.',
    },
    {
      name: 'disabled',
      required: false,
      type: 'boolean',
      default: 'false',
      description: (
        <span>
          When <Code>true</Code>, prevents the user from interacting
          with the item.
        </span>
      ),
    },
    {
      name: 'value',
      required: true,
      type: 'string',
      description: 'A unique value for the item.',
    },
  ]}
/>

### Header

Wraps an `Accordion.Button`. Use the `as` prop to update it to the appropriate heading level for your page.

<PropsTable
  data={[
    {
      name: 'as',
      required: false,
      type: 'keyof JSX.IntrinsicElements | React.ComponentType<any>',
      typeSimple: 'enum',
      default: 'h3',
      description:
        'Change the component to a different HTML tag or custom component. This will merge the original component props with the props of the supplied element/component and change the underlying DOM node.',
    },
  ]}
/>

### Button

Toggles the collapsed state of its associated item. It should be nested inside of an `Accordion.Header`.

<PropsTable
  data={[
    {
      name: 'as',
      required: false,
      type: 'keyof JSX.IntrinsicElements | React.ComponentType<any>',
      typeSimple: 'enum',
      default: 'button',
      description:
        'Change the component to a different HTML tag or custom component. This will merge the original component props with the props of the supplied element/component and change the underlying DOM node.',
    },
  ]}
/>

### Panel

Contains the collapsible content for an item.

<PropsTable
  data={[
    {
      name: 'as',
      required: false,
      type: 'keyof JSX.IntrinsicElements | React.ComponentType<any>',
      typeSimple: 'enum',
      default: 'div',
      description:
        'Change the component to a different HTML tag or custom component. This will merge the original component props with the props of the supplied element/component and change the underlying DOM node.',
    },
    {
      name: 'forceMount',
      type: 'boolean',
      description: (
        <span>
          Used to force mounting when more control is needed. Useful
          when controlling animation with React animation libraries.
        </span>
      ),
    },
  ]}
/>

## Styling

### Animating panel height

We expose a CSS custom property `--radix-accordion-panel-height`.<br />Use it to animate the height of the panel when it opens/closes.

```jsx
const slideDown = css.keyframes({
  from: { height: 0 },
  to: { height: 'var(--radix-accordion-panel-height)' },
});

const slideUp = css.keyframes({
  from: { height: 'var(--radix-accordion-panel-height)' },
  to: { height: 0 },
});

const StyledPanel = styled(Accordion.Panel, {
  '&[data-state="open"]': {
    animation: `${slideDown} 300ms ease-out`,
  },
  '&[data-state="closed"]': {
    animation: `${slideUp} 300ms ease-out`,
  },
});
```

## Examples

### With chevrons

```jsx manual compact
// import { styled } from 'path-to/stitches.config';
import * as Accordion from '@radix-ui/react-accordion';
import { ChevronDownIcon } from '@radix-ui/react-icons';

const StyledAccordion = styled(Accordion.Root, {
  borderTop: '1px solid gainsboro',
});

const StyledItem = styled(Accordion.Item, {
  borderBottom: '1px solid gainsboro',
});

const StyledHeader = styled(Accordion.Header, {
  margin: 0,
  display: 'flex',
});

const StyledButton = styled(Accordion.Button, {
  backgroundColor: 'transparent',
  border: 'none',
  padding: 10,
  flex: 1,
  display: 'flex',
  alignItems: 'center',
  justifyContent: 'space-between',
});

const StyledPanel = styled(Accordion.Panel, {
  padding: 10,
});

const AccordionChevron = styled(ChevronDownIcon, {
  transition: 'transform 300ms',

  '[data-state=open] &': {
    transform: 'rotate(180deg)',
  },
});

export default () => (
  <StyledAccordion type="single">
    <StyledItem value="item-1">
      <StyledHeader>
        <StyledButton>
          Item 1
          <AccordionChevron aria-hidden />
        </StyledButton>
      </StyledHeader>
      <StyledPanel>
        Here goes the content for the accordion item 1.
      </StyledPanel>
    </StyledItem>

    <StyledItem value="item-2">
      <StyledHeader>
        <StyledButton>
          Item 2
          <AccordionChevron aria-hidden />
        </StyledButton>
      </StyledHeader>
      <StyledPanel>
        Here goes the content for the accordion item 2.
      </StyledPanel>
    </StyledItem>

    <StyledItem value="item-3">
      <StyledHeader>
        <StyledButton>
          Item 3
          <AccordionChevron aria-hidden />
        </StyledButton>
      </StyledHeader>
      <StyledPanel>
        Here goes the content for the accordion item 3.
      </StyledPanel>
    </StyledItem>
  </StyledAccordion>
);
```

### Expanded by default

```jsx manual compact
// import { styled } from 'path-to/stitches.config';
import * as Accordion from '@radix-ui/react-accordion';
import { ChevronDownIcon } from '@radix-ui/react-icons';

const StyledAccordion = styled(Accordion.Root, {
  borderTop: '1px solid gainsboro',
});

const StyledItem = styled(Accordion.Item, {
  borderBottom: '1px solid gainsboro',
});

const StyledHeader = styled(Accordion.Header, {
  margin: 0,
  display: 'flex',
});

const StyledButton = styled(Accordion.Button, {
  backgroundColor: 'transparent',
  border: 'none',
  padding: 10,
  flex: 1,
  display: 'flex',
  alignItems: 'center',
  justifyContent: 'space-between',
});

const StyledPanel = styled(Accordion.Panel, {
  padding: 10,
});

const AccordionChevron = styled(ChevronDownIcon, {
  transition: 'transform 300ms',

  '[data-state=open] &': {
    transform: 'rotate(180deg)',
  },
});

export default () => (
  <StyledAccordion type="single" defaultValue="item-2">
    <StyledItem value="item-1">
      <StyledHeader>
        <StyledButton>
          Item 1
          <AccordionChevron aria-hidden />
        </StyledButton>
      </StyledHeader>
      <StyledPanel>
        Here goes the content for the accordion item 1.
      </StyledPanel>
    </StyledItem>

    <StyledItem value="item-2">
      <StyledHeader>
        <StyledButton>
          Item 2
          <AccordionChevron aria-hidden />
        </StyledButton>
      </StyledHeader>
      <StyledPanel>
        Here goes the content for the accordion item 2.
      </StyledPanel>
    </StyledItem>

    <StyledItem value="item-3">
      <StyledHeader>
        <StyledButton>
          Item 3
          <AccordionChevron aria-hidden />
        </StyledButton>
      </StyledHeader>
      <StyledPanel>
        Here goes the content for the accordion item 3.
      </StyledPanel>
    </StyledItem>
  </StyledAccordion>
);
```

### Controlled to prevent closing

```jsx manual compact
// import { styled } from 'path-to/stitches.config';
import * as Accordion from '@radix-ui/react-accordion';
import { ChevronDownIcon } from '@radix-ui/react-icons';

const StyledAccordion = styled(Accordion.Root, {
  borderTop: '1px solid gainsboro',
});

const StyledItem = styled(Accordion.Item, {
  borderBottom: '1px solid gainsboro',
});

const StyledHeader = styled(Accordion.Header, {
  margin: 0,
  display: 'flex',
});

const StyledButton = styled(Accordion.Button, {
  backgroundColor: 'transparent',
  border: 'none',
  padding: 10,
  flex: 1,
  display: 'flex',
  alignItems: 'center',
  justifyContent: 'space-between',
});

const StyledPanel = styled(Accordion.Panel, {
  padding: 10,
});

const AccordionChevron = styled(ChevronDownIcon, {
  transition: 'transform 300ms',

  '[data-state=open] &': {
    transform: 'rotate(180deg)',
  },
});

export default () => {
  const [value, setValue] = React.useState('item-2');
  return (
    <StyledAccordion
      type="single"
      value={value}
      onValueChange={(value) => value && setValue(value)}
    >
      <StyledItem value="item-1">
        <StyledHeader>
          <StyledButton>
            Item 1
            <AccordionChevron aria-hidden />
          </StyledButton>
        </StyledHeader>
        <StyledPanel>
          Here goes the content for the accordion item 1.
        </StyledPanel>
      </StyledItem>

      <StyledItem value="item-2">
        <StyledHeader>
          <StyledButton>
            Item 2
            <AccordionChevron aria-hidden />
          </StyledButton>
        </StyledHeader>
        <StyledPanel>
          Here goes the content for the accordion item 2.
        </StyledPanel>
      </StyledItem>

      <StyledItem value="item-3">
        <StyledHeader>
          <StyledButton>
            Item 3
            <AccordionChevron aria-hidden />
          </StyledButton>
        </StyledHeader>
        <StyledPanel>
          Here goes the content for the accordion item 3.
        </StyledPanel>
      </StyledItem>
    </StyledAccordion>
  );
};
```

### Multiple panels open at the same time

```jsx manual compact
// import { styled } from 'path-to/stitches.config';
import * as Accordion from '@radix-ui/react-accordion';
import { ChevronDownIcon } from '@radix-ui/react-icons';

const StyledAccordion = styled(Accordion.Root, {
  borderTop: '1px solid gainsboro',
});

const StyledItem = styled(Accordion.Item, {
  borderBottom: '1px solid gainsboro',
});

const StyledHeader = styled(Accordion.Header, {
  margin: 0,
  display: 'flex',
});

const StyledButton = styled(Accordion.Button, {
  backgroundColor: 'transparent',
  border: 'none',
  padding: 10,
  flex: 1,
  display: 'flex',
  alignItems: 'center',
  justifyContent: 'space-between',
});

const StyledPanel = styled(Accordion.Panel, {
  padding: 10,
});

const AccordionChevron = styled(ChevronDownIcon, {
  transition: 'transform 300ms',

  '[data-state=open] &': {
    transform: 'rotate(180deg)',
  },
});

export default () => (
  <StyledAccordion
    type="multiple"
    defaultValue={['item-2', 'item-3']}
  >
    <StyledItem value="item-1">
      <StyledHeader>
        <StyledButton>
          Item 1
          <AccordionChevron aria-hidden />
        </StyledButton>
      </StyledHeader>
      <StyledPanel>
        Here goes the content for the accordion item 1.
      </StyledPanel>
    </StyledItem>

    <StyledItem value="item-2">
      <StyledHeader>
        <StyledButton>
          Item 2
          <AccordionChevron aria-hidden />
        </StyledButton>
      </StyledHeader>
      <StyledPanel>
        Here goes the content for the accordion item 2.
      </StyledPanel>
    </StyledItem>

    <StyledItem value="item-3">
      <StyledHeader>
        <StyledButton>
          Item 3
          <AccordionChevron aria-hidden />
        </StyledButton>
      </StyledHeader>
      <StyledPanel>
        Here goes the content for the accordion item 3.
      </StyledPanel>
    </StyledItem>
  </StyledAccordion>
);
```

## Accessibility

Adheres to the [Accordion WAI-ARIA design pattern](https://www.w3.org/TR/wai-aria-practices-1.1/#accordion).

### Keyboard Interactions

<KeyboardTable
  data={[
    {
      keys: ['Space'],
      description: (
        <span>
          When focus is on an <Code>Accordion.Button</Code> of a
          collapsed section, expands the section.
        </span>
      ),
    },
    {
      keys: ['Enter'],
      description: (
        <span>
          When focus is on an <Code>Accordion.Button</Code> of a
          collapsed section, expands the section.
        </span>
      ),
    },
    {
      keys: ['Tab'],
      description: 'Moves focus to the next focusable element.',
    },
    {
      keys: ['Shift + Tab'],
      description: 'Moves focus to the previous focusable element.',
    },
    {
      keys: ['ArrowDown'],
      description: (
        <span>
          Moves focus to the next <Code>Accordion.Button</Code>.
        </span>
      ),
    },
    {
      keys: ['ArrowUp'],
      description: (
        <span>
          Moves focus to the previous <Code>Accordion.Button</Code>.
        </span>
      ),
    },
    {
      keys: ['Home'],
      description: (
        <span>
          When focus is on an <Code>Accordion.Button</Code>, moves
          focus to the first <Code>Accordion.Button</Code>.
        </span>
      ),
    },
    {
      keys: ['End'],
      description: (
        <span>
          When focus is on an <Code>Accordion.Button</Code>, moves
          focus to the last <Code>Accordion.Button</Code>.
        </span>
      ),
    },
  ]}
/>
